Fix hotspot to allow stdlib to use libc++ and to allow changing the deployment target to 10.9

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • b07
    • x86
    • os_x
    • Verified

      This issue tracks hotspot src code only changes required to switch to Xcode 9.x (i.e using libc++ and changing deployment target to 10.9)

      It was split out of JDK-8196724

            Assignee:
            Gerard Ziemski (Inactive)
            Reporter:
            Gerard Ziemski (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: