8199356: Fix hotspot to allow stdlib to use libc++ and to allow changing the deployment target to 10.9

Remove conflicting poison min/max define

Reviewed-by: kbarrett, lfoltan